# OpenCLCourse

./: CMakeLists.txt  README.md  matrix.h  matrix_mul.c  matrix_mul.cl  prefix.h  prefix_sum.c  prefix_sum.cl  print_opencl_error.h
